Extended comment, mostly just for the sake of it...
git-svn-id: http://subversion.assembla.com/svn/Debrief@1413 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.installer/build.xml
+++ b/trunk/org.mwc.cmap.installer/build.xml
@@ -83,7 +83,7 @@
 		</copy>
 	</target>
 
-	<!-- try to make the builders -->
+	<!-- try to make the builders - though we're considering shifting to NSIS... -->
 	<target name="build_installer" description="create the installation file" depends="">
 		<exec executable="${advancedInstallerPath}\AdvancedInstaller.exe">
 			<arg line="/build ng_installer_settings.aip" />
