New properties automatically added in 3.3 upgrade
git-svn-id: http://subversion.assembla.com/svn/Debrief@1418 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -374,6 +374,14 @@
         <property
               name="startupMessageRect"
               value="0,0,0,0"/>
+        <property
+              name="appName"
+              value="DebriefNG">
+        </property>
+        <property
+              name="preferenceCustomization"
+              value="plugin_customization.ini">
+        </property>
      </product>
      </extension>
 
