--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -43,6 +43,7 @@
       <import plugin="org.eclipse.ui.cheatsheets"/>
       <import plugin="org.eclipse.ui.intro"/>
       <import plugin="org.eclipse.platform"/>
+      <import plugin="org.eclipse.core.filesystem"/>
       
    </requires>
    <extension-point id="DebriefPlotLoader" 
