More context sensitive help experiments
git-svn-id: http://subversion.assembla.com/svn/Debrief@1449 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.help/plugin.xml
+++ b/trunk/org.mwc.debrief.help/plugin.xml
@@ -188,13 +188,11 @@
             contentFile="cheat_sheets/narratives/AnalysingNarrativeData.xml"
             id="org.mwc.debrief.help.narrativs.analysing"
             name="Analysing narrative data in Debrief"/>            
-      
-      
-                              </extension>
+
+</extension>
    <extension
          point="org.eclipse.help.contexts">
       <contexts
-            file="HelpContexts.xml"
-            plugin="org.mwc.cmap.overview"/>
+            file="HelpContexts.xml"  plugin="org.mwc.debrief.help"/>
    </extension>
 </plugin>
