Experiment with context sensitive help
git-svn-id: http://subversion.assembla.com/svn/Debrief@1451 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.TimeController/plugin.xml
+++ b/trunk/org.mwc.cmap.TimeController/plugin.xml
@@ -48,4 +48,7 @@
      <initializer class="org.mwc.cmap.TimeController.preferences.PreferenceInitializer"/>
   </extension>
   
+   <extension point="org.eclipse.help.contexts">
+      <contexts plugin="org.mwc.debrief.help" file="HelpContexts.xml"/>
+   </extension>  
 </plugin>
