Switch to new method of specifying Welcome page
git-svn-id: http://subversion.assembla.com/svn/Debrief@1495 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -411,5 +411,32 @@
         point="org.eclipse.core.runtime.preferences">
      <initializer class="org.mwc.debrief.core.preferences.PreferenceInitializer"/>
   </extension>
+  <extension
+        point="org.eclipse.ui.intro">
+     <intro
+           class="org.eclipse.ui.intro.config.CustomizableIntroPart"
+           id="org.mwc.debrief.core.intro">
+     </intro>
+     <introProductBinding
+           introId="org.mwc.debrief.core.intro"
+           productId="org.mwc.debrief.core.Debrief">
+     </introProductBinding>
+  </extension>
+  <extension
+        point="org.eclipse.ui.intro.config">
+     <config
+           content="intro/introContent.xml"
+           id="org.mwc.debrief.core.introConfigId"
+           introId="org.mwc.debrief.core.intro">
+        <presentation
+              home-page-id="root">
+           <implementation
+                 kind="html"
+                 os="win32,linux,macosx"
+                 style="content/shared.css">
+           </implementation>
+        </presentation>
+     </config>
+  </extension>
   
 </plugin>
