--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -44,6 +44,7 @@
       <import plugin="org.eclipse.ui.intro"/>
       <import plugin="org.eclipse.platform"/>
       <import plugin="org.eclipse.core.filesystem"/>
+      <import plugin="org.eclipse.ui.intro.universal"/>
       
    </requires>
    <extension-point id="DebriefPlotLoader" 
@@ -418,25 +419,17 @@
            id="org.mwc.debrief.core.intro">
      </intro>
      <introProductBinding
-           introId="org.mwc.debrief.core.intro"
+           introId="org.eclipse.ui.intro.universal"
            productId="org.mwc.debrief.core.Debrief">
      </introProductBinding>
   </extension>
   <extension
-        point="org.eclipse.ui.intro.config">
-     <config
-           content="intro/introContent.xml"
-           id="org.mwc.debrief.core.introConfigId"
-           introId="org.mwc.debrief.core.intro">
-        <presentation
-              home-page-id="root">
-           <implementation
-                 kind="html"
-                 os="win32,linux,macosx"
-                 style="content/shared.css">
-           </implementation>
-        </presentation>
-     </config>
+        point="org.eclipse.ui.intro.configExtension">
+     <configExtension
+           configId="org.eclipse.ui.intro.universalConfig"
+           content="welcome/sample.xml">
+     </configExtension>
   </extension>
+
   
 </plugin>
