include customisation.ini in build file
git-svn-id: http://subversion.assembla.com/svn/Debrief@1500 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/build.properties
+++ b/trunk/org.mwc.debrief.core/build.properties
@@ -6,4 +6,5 @@ bin.includes = plugin.xml,\
                schema/,\
                icons/,\
                intro/,\
-               images/
+               images/,\
+               plugin_customization.ini
