Add new intro extensions
git-svn-id: http://subversion.assembla.com/svn/Debrief@1501 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -428,6 +428,34 @@
            productId="org.mwc.debrief.core.Debrief">
      </introProductBinding>
   </extension>
+  <extension
+        point="org.eclipse.ui.intro.configExtension">
+     <configExtension
+           configId="org.eclipse.ui.intro.universalConfig"
+           content="intro_content/debrief_overview.xml">
+     </configExtension>
+  </extension>
+  <extension
+        point="org.eclipse.ui.intro.configExtension">
+     <configExtension
+           configId="org.eclipse.ui.intro.universalConfig"
+           content="intro_content/debrief_tutorials.xml">
+     </configExtension>
+  </extension>
+  <extension
+        point="org.eclipse.ui.intro.configExtension">
+     <configExtension
+           configId="org.eclipse.ui.intro.universalConfig"
+           content="intro_content/debrief_firststeps.xml">
+     </configExtension>
+  </extension>
+  <extension
+        point="org.eclipse.ui.intro.configExtension">
+     <configExtension
+           configId="org.eclipse.ui.intro.universalConfig"
+           content="intro_content/debrief_whatsnew.xml">
+     </configExtension>
+  </extension>
 
   
 </plugin>
