--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -392,7 +392,7 @@
             value="product:icons/debrief_icon.gif"/>
       <property
             name="introBrandingImageText"
-            value="Maritime Warfare Centre"/>        
+            value="Debrief, from the Maritime Warfare Centre"/>        
      </product>
      </extension>
 
