acknowledge updated folder name for intro content
git-svn-id: http://subversion.assembla.com/svn/Debrief@1507 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/build.properties
+++ b/trunk/org.mwc.debrief.core/build.properties
@@ -5,6 +5,6 @@ bin.includes = plugin.xml,\
                debrief_core.jar,\
                schema/,\
                icons/,\
-               intro/,\
                images/,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               intro_content/
