ignore svn components in data install
git-svn-id: http://subversion.assembla.com/svn/Debrief@1528 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.StaticResources/build.properties
+++ b/trunk/org.mwc.cmap.StaticResources/build.properties
@@ -6,4 +6,6 @@ jars.compile.order = library.jar
 source.library.jar = src/
 root=root_installs/                 
 src.includes = src/
+bin.excludes = data/.svn/,\
+               data/.cvsignore
 
