Tidying of build process/libs included in build
git-svn-id: http://subversion.assembla.com/svn/Debrief@1560 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.plot3d/build.properties
+++ b/trunk/org.mwc.cmap.plot3d/build.properties
@@ -5,3 +5,7 @@ bin.includes = plugin.xml,\
                icons/,\
                META-INF/,\
                libs/
+bin.excludes = libs/j3daudio.jar,\
+               libs/j3dutils.jar,\
+               libs/j3dcore.jar,\
+               libs/vecmath.jar
