--- a/trunk/org.mwc.cmap.plot3d/plugin.xml
+++ b/trunk/org.mwc.cmap.plot3d/plugin.xml
@@ -11,7 +11,7 @@
                class="org.mwc.cmap.plot3d.actions.View3d"
                icon="icons/view3d.gif"
                id="org.mwc.cmap.plot3d.actions.View3d"
-               label="&amp;View 3d (new)"
+               label="&amp;View 3d"
                menubarPath="org.mwc.debrief.core.EditorView/additions"
                style="push"
                toolbarPath="org.mwc.debrief.core.EditorView/additions"/>                    
